<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vukzrito.bolo.add.AddIncidentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:visibility="gone"
            android:layout_marginTop="-7dp"/>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/add_vehicle_ad_id" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registration_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_registration_number"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_vin"
                android:inputType="textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_make" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_model" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/incident_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/incident_types"
                android:prompt="@string/label_incident_type"
                android:hint="@string/label_incident_type" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/incident_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_incident_date"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_incident_location"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="Submit"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>
